# physics_animation

./: .cruft.json  README.md  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yaml
docs/: conf.py  index.rst  reference.rst
notebooks/: double_pendulum.ipynb
physics_animation/: double_pendulum.py
